--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^8.73",
-        "illuminate/database": "^8.77",
+        "illuminate/contracts": "^8.73|^9",
+        "illuminate/database": "^8.77|^9",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
