--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/contracts": "^8.73|^9",
-        "illuminate/database": "^8.77|^9",
+        "php": "^8.1",
+        "illuminate/contracts": "^8.73|^9|^10",
+        "illuminate/database": "^8.77|^9"|^10,
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
@@ -30,7 +30,7 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5|^10.0",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
