--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.1",
         "illuminate/contracts": "^8.73|^9|^10",
-        "illuminate/database": "^8.77|^9"|^10,
+        "illuminate/database": "^8.77|^9"|^10",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
