--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/contracts": "^8.73|^9|^10",
-        "illuminate/database": "^8.77|^9|^10",
+        "php": "^8.2",
+        "illuminate/contracts": "^8.73|^9|^10|^11",
+        "illuminate/database": "^8.77|^9|^10|^11",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
